--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="weather-icon-14.jpg">
+    <link rel="icon" href="./weather-icon-14.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>A Simple Weather App</title>
   </head>
   <body>
